# adn-comparator

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  adn-comparator  distance.c  distance.h  double_hash_map.c  double_hash_map.h  family.c  family.h  file.c  file.h  main.c  sequence.c  sequence.h  sorted_linked_list.c  sorted_linked_list.h
family/: family.c  family.h
sequence/: distance.c  distance.h  nucleotide.c  nucleotide.h  sequence.c  sequence.h
util/: file.c  file.h  sorted_hash_map.c  sorted_hash_map.h  sorted_linked_list.c  sorted_linked_list.h
view/: view.c  view.h
